--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,9 +1,47 @@
 
-h1{
+h1,h2,h3,h4,h5,h6{
+    color: rgb(206, 165, 244);
     font-family: "Playfair Display", serif;
     font weight: bold;
 }
-P{
+h1{
+    font-size: 96px;
+}
+h2{
     font-family: "Poppins", sans-serif;
     font-weight: normal;
+    color: white;
+}
+.hero{
+    background-color: rgb(14, 14, 14);
+    text-align: center;
+    padding: 160px 20px;
+}
+.contact{
+    color: white;
+}
+p{
+    color: white;
+}
+.hero p{
+    font-family: "Poppins", sans-serif;
+    font-size: 38px;
+    font-weight: bold;
+    margin: 0;
+}
+.hero h2{
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 2;
+}
+.btn-branding{
+    background-color: rgb(206, 165, 244);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 12px 20px;
+}
+.btn-branding:hover{
+background-color: white;
 }
