--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,7 +18,7 @@ h2{
     padding: 160px 20px;
 }
 .contact{
-    color: white;
+    color:white;
 }
 p{
     color: white;
@@ -44,4 +44,24 @@ p{
 }
 .btn-branding:hover{
 background-color: white;
+}
+.btn-branding-outline{
+    background-color:  rgb(206, 165, 244);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 12px 20px;
+    color: white;
+}
+.project-1{
+    color: black;
+    font-size: 64px;
+    font-family: "Playfair Display", serif;
+}
+.p-1{
+    color: black;
+    font-family: "Poppins", sans-serif;
+}
+.text-center{
+    color: black;
 }
