--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,11 +72,46 @@ background-color: white;
         padding:0;
         text-align: center;
     }
+    .about-section{
+        text-align: center;
+        padding: 0;
+    }
+    .brookem{
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+
+    }
 }
 .img-fluid{
     max-width: 600px;
 }
+.about-section{
+    padding: 160px 20px;
+}
+.about-section-content{
+    margin: 30px;
+}
 
+.about-section h1{
+    font-size: 64px;
+    line-height: 80px;
+}
+.about-section h2{
+font-size: 18px;
+font-family:"Poppins", sans-serif;
+}
+.header-2{
+    color: black;
+}
+.header-3{
+    color: black;
+}
+.brookem{
+    max-width: 500px;
+    border-radius:12px;
+}
 
 
 
