--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,7 +72,7 @@ background-color: white;
         padding:0;
         text-align: center;
     }
-    .about-section{
+    .content-container{
         text-align: center;
         padding: 0;
     }
@@ -80,25 +80,25 @@ background-color: white;
         display:block;
         margin-left: auto;
         margin-right: auto;
-        width: 80%;
+        width: 80%3;
 
     }
 }
 .img-fluid{
     max-width: 600px;
 }
-.about-section{
+.content-container{
     padding: 160px 20px;
 }
-.about-section-content{
+.content-container{
     margin: 30px;
 }
 
-.about-section h1{
+.content-container h1{
     font-size: 64px;
     line-height: 80px;
 }
-.about-section h2{
+.content h2{
 font-size: 18px;
 font-family:"Poppins", sans-serif;
 }
@@ -111,6 +111,7 @@ font-family:"Poppins", sans-serif;
 .brookem{
     max-width: 500px;
     border-radius:12px;
+    padding-top: 10px;
 }
 
 
